<resources>
    <string name="app_name">El Pucherito</string>
    <string name="restaurant_chart">CARTA</string>
    <string name="title_activity_restaurants">RestaurantsActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="restaurants">RESTAURANTES</string>

    <!---->

    <string name="login">Registro</string>
    <string name="signin">Registrate</string>

    <!-- Acciones de la app -->

    <string name="stayIn">Mantener conectado</string>
    <string name="signoff">Cerrar sesion</string>
    <string name="savechanges">Guardar</string>
    <string name="next">Siguiente</string>



    <!-- Caracteristicas de USUARIO -->
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="phone">Telefono</string>
    <string name="email">E-Mail</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="address">Direccion</string>

    <!-- Modify user -->

    <string name="modifyUser">Modificar usuario</string>
    <string name="edit">Editar</string>

    <!-- TOAST MESSAGE -->

    <string name="invalidUser">Usuario o contraseña erroneo</string>
    <string name="errorField">Error in fields</string>

    <!---->
    <string name="test_name">Nombre</string>
    <string name="test_description">Descripcion</string>
    <string name="test_price">precio€</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="gracias_por_su_compra">¡GRACIAS POR SU COMPRA!</string>
    <string name="la_entrega_ser_enviada_a_la_direcci_n">La entrega será enviada a la dirección:</string>
    <string name="cantidad">Cantidad</string>
    <string name="namedish">nameDish</string>
    <string name="dishprice">dishPrice</string>
    <string name="volver">Volver</string>
    <string name="pedir">PEDIR</string>
    <string name="total">Total</string>
    <string name="prueba">PRUEBA</string>
    <string name="restaurantimage">RestaurantImage</string>
    <string name="tiempo_de_entrega">Tiempo de entrega:</string>
    <string name="non_existing_products">No existe ningun pedido</string>
    <string name="product_added">Producto añadido</string>
    <string name="product_added_information">Se ha añadido correctamente el producto al carrito.</string>
    <string name="keep_buying">Continuar comprando</string>
    <string name="go_shopping_cart">Ir al carrito</string>
    <string name="a_adir_al_carrito_imagen">Añadir al carrito imagen</string>
    <string name="must_fill">¡Tienes que rellenar todos los campos!</string>
    <string name="pedidos_realizados">PEDIDOS REALIZADOS</string>
    <string name="categoria">Categoría:</string>
    <string name="resta">-</string>
    <string name="suma">+</string>

</resources>
