<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/restaurant_dish_card1"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="10sp">

    <ImageView
        android:id="@+id/restaurants_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/restaurantimage"
        android:scaleType="centerCrop"
        android:src="@drawable/elabuelo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurants_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#8c000000"
            android:padding="10dp"
            android:text="@string/prueba"
            android:textColor="#ffe3e3e3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/restaurants_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/Gold"
            android:isIndicator="true"/>

        <TextView
            android:id="@+id/restaurants_tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/categoria"
            android:textColor="#FFF8F8"
            android:textSize="28dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>