<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restaurant_dish_card1"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurant_dish_name"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:fontFamily="sans-serif-black"
                android:gravity="center|center_horizontal"
                android:text="@string/test_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restaurant_dish_price"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-black"
                android:gravity="center|center_horizontal|center_vertical"
                android:padding="20dp"
                android:text="@string/prueba" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurant_dish_description"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:fontFamily="sans-serif-black"
                android:gravity="center|center_vertical"
                android:lines="3"
                android:maxWidth="300dp"
                android:scrollHorizontally="true"
                android:text="@string/test_description" />

            <ImageButton
                android:id="@+id/restaurant_dish_buy"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"

                android:backgroundTint="@color/Garnet"
                android:contentDescription="@string/a_adir_al_carrito_imagen"
                android:gravity="center|center_horizontal"
                android:maxHeight="20dp"
                android:src="@drawable/ic_shopping_cart_32" />

        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>