<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.users.ModifyProfile">


    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/Garnet"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageArrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            android:paddingLeft="15dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/seagram_tfb"
            android:text="@string/app_name"
            android:textColor="@color/White"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/modify_tv_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/modifyUser"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/modify_et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="90sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="90sp"
                    android:background="@drawable/et_box"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:minHeight="50dp"

                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/modify_et_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="90sp"
                    android:background="@drawable/et_box"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:minHeight="50dp"

                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/modify_et_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="90sp"
                    android:background="@drawable/et_box"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    android:minHeight="50dp"

                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/modify_et_phonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="90sp"
                    android:background="@drawable/et_box"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/phone"
                    android:inputType="number|textPersonName"
                    android:minHeight="50dp"

                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/modify_et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="90sp"
                    android:background="@drawable/et_box"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:minHeight="50dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/modify_et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="90sp"
                    android:background="@drawable/et_box"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPersonName|textWebPassword"
                    android:minHeight="50dp"

                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/modify_btn_save"
            android:layout_width="167dp"
            android:layout_height="60dp"

            android:layout_marginLeft="110dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="160dp"
            android:background="@drawable/btn_login"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/savechanges"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>

