<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="80sp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    android:scrollbarSize="14dp"
    tools:context=".activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <EditText
                    android:id="@+id/login_et_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90sp"
                    android:layout_marginTop="50sp"
                    android:layout_marginRight="90sp"
                    android:background="@color/thirdColor"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:minHeight="50dp"
                    android:text="@string/username" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <EditText
                    android:id="@+id/login_et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90sp"
                    android:layout_marginTop="50sp"
                    android:layout_marginRight="90sp"
                    android:background="@color/thirdColor"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:minHeight="50dp"
                    android:text="@string/password"
                    android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/login_cb_stayin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130sp"
                    android:layout_marginTop="40sp"
                    android:minWidth="30dp"
                    android:text="@string/stayIn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150sp"
                    android:layout_marginTop="60sp"
                    android:layout_marginRight="130sp"
                    android:background="@drawable/btn_login"
                    android:minWidth="88dp"
                    android:text="@string/enter" />
        </LinearLayout>

</LinearLayout>