<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/Garnet"
    android:orientation="vertical"
    android:scrollbarSize="14dp"
    tools:context=".activities.users.SignActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/seagram_tfb"
            android:minHeight="30dp"
            android:text="@string/app_name"
            android:textColor="@color/White"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8sp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/White"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sign_tv_signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signin"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sign_et_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90sp"
                        android:layout_marginTop="50sp"
                        android:layout_marginRight="90sp"
                        android:background="@drawable/et_box"
                        android:ems="10"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:hint="@string/name"
                        android:inputType="textPersonName"

                        android:minHeight="50dp"
                        android:textSize="18sp"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sign_et_surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90sp"
                        android:layout_marginTop="50sp"
                        android:layout_marginRight="90sp"
                        android:background="@drawable/et_box"
                        android:ems="10"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:hint="@string/surname"
                        android:inputType="textPersonName"

                        android:minHeight="50dp"
                        android:textSize="18sp"
                        android:autofillHints="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sign_et_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90sp"
                        android:layout_marginTop="50sp"
                        android:layout_marginRight="90sp"
                        android:background="@drawable/et_box"
                        android:ems="10"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:hint="@string/address"
                        android:inputType="textPersonName"

                        android:minHeight="50dp"
                        android:textSize="18sp"
                        android:autofillHints="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sign_et_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90sp"
                        android:layout_marginTop="50sp"
                        android:layout_marginRight="90sp"
                        android:autofillHints=""
                        android:background="@drawable/et_box"
                        android:ems="10"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:hint="@string/email"
                        android:inputType="textWebEmailAddress|textPersonName|textEmailAddress"
                        android:minHeight="50dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sign_et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90sp"
                        android:layout_marginTop="50sp"
                        android:layout_marginRight="90sp"
                        android:background="@drawable/et_box"
                        android:ems="10"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPersonName|textPassword|textWebPassword"

                        android:minHeight="50dp"
                        android:textSize="18sp"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sign_et_phonenumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90sp"
                        android:layout_marginTop="50sp"
                        android:layout_marginRight="90sp"
                        android:background="@drawable/et_box"
                        android:ems="10"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:hint="@string/phone"
                        android:inputType="number|textPersonName"

                        android:minHeight="50dp"
                        android:textSize="18sp"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/sign_btn_enter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="32dp"
                        android:background="@drawable/btn_login"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:minWidth="90dp"
                        android:minHeight="70dp"
                        android:text="@string/signin"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>