<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/restaurant_dish_card1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_quantity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/shoppingcart_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/namedish"
            android:lines="2"
            android:scrollHorizontally="true"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shoppingcart_btn_substract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3sp"
                android:layout_weight="1"
                android:background="@drawable/btn_quantity"
                android:minWidth="5dp"
                android:minHeight="10dp"
                android:text="-" />

            <TextView
                android:id="@+id/shoppingcart_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="70dp"
                android:text="@string/cantidad" />

            <Button
                android:id="@+id/shoppingcart_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_quantity"
                android:minWidth="5dp"
                android:minHeight="10dp"
                android:text="+" />
        </LinearLayout>

        <TextView
            android:id="@+id/shoppingcart_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/dishprice" />

        <ImageView
            android:id="@+id/shoppingcart_item_delete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:src="@drawable/ic_cancel"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>